--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+@{
     ViewBag.Title = "Recruit an Apprentice";
 }
 
@@ -14,7 +15,7 @@
                 area. Once signed in you'll be automatically returned to our service.
             </p>
             <p>
-                <a href="idams-provider.html" class="button">Sign in</a>
+                <a href="@Url.RouteUrl("LoginDummy")" class="button">Sign in</a>
             </p>
         </div>
     </section>
