--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                 area. Once signed in you'll be automatically returned to our service.
             </p>
             <p>
-                <a href="@Url.RouteUrl("LoginDummy")" class="button">Sign in</a>
+                <a href="@Url.RouteUrl(RecruitmentRouteNames.SignIn)" class="button">Sign in</a>
             </p>
         </div>
     </section>
