--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/UserInfo.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/UserInfo.cshtml
@@ -61,7 +61,7 @@
             By continuing you accept the <a href="terms-and-conditions.html" target="_blank">terms and conditions</a> of
             this site.
         </p>
-        <a id="providerCreateBtn" href="@Url.RouteUrl(RecruitmentRouteNames.VertifyEmail)" class="button">Accept and continue</a>
+        <a id="providerCreateBtn" href="@Url.RouteUrl(RecruitmentRouteNames.VerifyEmail)" class="button">Accept and continue</a>
     </div>
     <div class="" id="userInfoSaveBtn">
         <a href="" class="button" id="userInfoSaveBtnClick">Save details</a>
