--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.Controllers
+﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+@using SFA.Apprenticeships.Web.Recruit.Controllers
 
 @if (Request.IsAuthenticated)
 {
@@ -8,7 +9,7 @@
     <div class="account-info" id="bannerSignedIn">
         <div class="small-btm-margin">
             <span class="your-name" id="bannerUserName">@fullName</span>
-            <a id="signout-link" href=""><i class="fa fa-sign-out"></i>Sign out</a>
+            <a id="signout-link" href="@Url.RouteUrl(RecruitmentRouteNames.SignOut)"><i class="fa fa-sign-out"></i>Sign out</a>
         </div>
         <div>
             <a class="account-link" id="applicationsLink" href="recruitment-home.html">Home</a>
