Stub code to test all login paths

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
             </div>
             <div class="global-header__nav">
                 <div class="global-header__title alpha" id="headerLinkFAA">
-                    <a href="/recruit">Recruit an apprentice</a>
+                    <a href="/">Recruit an apprentice</a>
                 </div>
             </div>
         </div>
