--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/UserInfo.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/UserInfo.cshtml
@@ -1,4 +1,6 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.UserProfileViewModel
+
+@using SFA.Apprenticeships.Web.Recruit.Constants
 @{
     ViewBag.Title = "Recruit an Apprentice - Contact Details";
 }
@@ -28,42 +30,34 @@
             be used by us if we need to contact you.
         </p>
     </div>
-    <div class="form-group">
-        <label for="yourName" class="form-label">Full name</label>
-        <input id="yourName" type="text" class="form-control">
-    </div>
-    <div class="form-group">
-        <label for="yourEmail" class="form-label">Work email address</label>
-        <input id="yourEmail" type="email" class="form-control">
-    </div>
-    <div class="form-group">
-        <label for="yourPhone" class="form-label">Work phone number</label>
-        <input id="yourPhone" type="tel" class="form-control form-control-1-3">
-    </div>
+
+@using (Html.BeginRouteForm(RecruitmentRouteNames.UserInfo, FormMethod.Post))
+{
+    @Html.FormTextFor(
+        m => m.Fullname,
+        controlHtmlAttributes: new { type = "text", autofocus = "autofocus", spellcheck = "false" })
+
+    @Html.FormTextFor(
+        m => m.EmailAddress,
+        controlHtmlAttributes: new { type = "email", spellcheck = "false" })
+
+    @Html.FormTextFor(
+        m => m.PhoneNumber,
+        controlHtmlAttributes: new { @class = "form-label", type = "tel", spellcheck = "false" })
+
     <div class="form-group">
         <p class="form-label">Your default training site</p>
-        <select name="" id="" class="chosen-select">
-            <option value="" selected>Basing View, Basingstoke</option>
-            <option value="">Great Charles Street Queensway, Birmingham</option>
-            <option value="">St. Helens Street, Ipswich</option>
-            <option value="">South Parade, Leeds</option>
-            <option value="">24-26 Baltic Street West, London</option>
-            <option value="">Dean Street, Newcastle upon Tyne</option>
-            <option value="">Judson Road, Peterlee</option>
-            <option value="">David Murray John Tower, Swindon</option>
-            <option value="">6-10 Gills Yard, Wakefield</option>
-            <option value="">Sheep Street, Wellingborough</option>
-            <option value="">Sheet Street, Windsor</option>
-        </select>
+        @Html.DropDownListFor(m => m.DefaultTrainingSiteId, (List<SelectListItem>)ViewBag.Sites, new { @class = "chosen-select" })
     </div>
     <div class="toggle-content" id="newProviderTerms">
         <p>
             By continuing you accept the <a href="terms-and-conditions.html" target="_blank">terms and conditions</a> of
             this site.
         </p>
-        <a id="providerCreateBtn" href="@Url.RouteUrl(RecruitmentRouteNames.VerifyEmail)" class="button">Accept and continue</a>
+        <button class="button">Accept and continue</button>
     </div>
     <div class="" id="userInfoSaveBtn">
-        <a href="" class="button" id="userInfoSaveBtnClick">Save details</a>
+        <button class="button">Save details</button>
     </div>
+}
 </div>
