Consistent use of ProviderUser and ProviderUser validator

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
@@ -125,9 +125,9 @@
         </div>
     </div>
     <div class="toggle-content" id="newProviderContinue">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.UserInfo)" class="button" id="newProviderContinueBtn">Save and continue</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)" class="button" id="newProviderContinueBtn">Save and continue</a>
     </div>
     <div class="" id="providerDetailsSave">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.UserInfo)" class="button">Save details</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)" class="button">Save details</a>
     </div>
 </div>
