Unobstrusive js working and for provider user settings.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -161,7 +161,7 @@
     @Scripts.Render("~/bundles/fastclick")
     @Scripts.Render("~/bundles/underscore")
     @Scripts.Render("~/bundles/joyride")
-    @Scripts.Render("~/bundles/nascript")
+    @Scripts.Render("~/bundles/nas")
     @RenderSection("scripts", required: false)
 </body>
 </html>
