--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
@@ -1,9 +1,10 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+@model SFA.Apprenticeships.Web.Recruit.ViewModels.Provider.ProviderViewModel
 @{
     ViewBag.Title = "Recruit an Apprentice - Manage your Sites";
 }
 
-<div class="panel-success toggle-content" id="newProviderBanner">
+<!--<div class="panel-success toggle-content" id="newProviderBanner">
     <div class="text">
         <div class="copy-16">
             <p id="firstProviderMessage">
@@ -16,16 +17,27 @@
             </p>
         </div>
     </div>
-</div>
+</div>-->
 <div class="grid-wrapper" id="pageManageSites">
     <div class="hgroup text para-btm-margin">
         <h1 class="heading-xlarge">
             Provider details
         </h1>
     </div>
+
+@using (Html.BeginRouteForm(RecruitmentRouteNames.ManageProviderSites, FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+
     <div class="form-group">
-        <label for="providerNameInput" class="form-label">Provider name</label>
-        <input type="text" class="form-control" id="providerNameInput" value="Key Training Ltd">
+
+        @Html.FormTextFor(
+            m => m.ProviderName,
+            controlHtmlAttributes: new { type = "text", autofocus = "autofocus", spellcheck = "false" })
+
+        <!--<label for="providerNameInput" class="form-label">Provider name</label>
+        <input type="text" class="form-control" id="providerNameInput" value="Key Training Ltd">-->
     </div>
     <div id="providerSitesList">
         <h2 class="heading-medium">Manage your training sites</h2>
@@ -39,95 +51,96 @@
                         <col>
                     </colgroup>
                     <tbody>
-                        <tr>
-                            <td>Basing View, Basingstoke</td>
-                            <td>
-                                <a href="@Url.RouteUrl(RecruitmentRouteNames.EditProviderSite)">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Great Charles Street Queensway, Birmingham</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>St. Helens Street, Ipswich</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>South Parade, Leeds</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>24-26 Baltic Street West, London</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Dean Street, Newcastle upon Tyne</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Judson Road, Peterlee</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>David Murray John Tower, Swindon</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>6-10 Gills Yard, Wakefield</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Sheet Street, Windsor</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>Sheep Street, Wellingborough</td>
-                            <td>
-                                <a href="edit-site.html">Edit</a>
-                            </td>
-                            <td></td>
-                        </tr>
+                    <tr>
+                        <td>Basing View, Basingstoke</td>
+                        <td>
+                            <a href="@Url.RouteUrl(RecruitmentRouteNames.EditProviderSite)">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Great Charles Street Queensway, Birmingham</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>St. Helens Street, Ipswich</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>South Parade, Leeds</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>24-26 Baltic Street West, London</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Dean Street, Newcastle upon Tyne</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Judson Road, Peterlee</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>David Murray John Tower, Swindon</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>6-10 Gills Yard, Wakefield</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Sheet Street, Windsor</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Sheep Street, Wellingborough</td>
+                        <td>
+                            <a href="edit-site.html">Edit</a>
+                        </td>
+                        <td></td>
+                    </tr>
                     </tbody>
                 </table>
             </div>
         </section>
         <div class="form-group">
-            <a href="@Url.RouteUrl(RecruitmentRouteNames.AddProviderSite)" class=""><i class="fa fa-plus"></i>Add a new  site</a>
+            <a href="@Url.RouteUrl(RecruitmentRouteNames.AddProviderSite)" class=""><i class="fa fa-plus"></i>Add a new site</a>
         </div>
     </div>
     <div class="toggle-content" id="newProviderContinue">
         <a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)" class="button" id="newProviderContinueBtn">Save and continue</a>
     </div>
     <div class="" id="providerDetailsSave">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)" class="button">Save details</a>
+        <button class="button">Save details</button>
     </div>
+}
 </div>
