--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
@@ -36,8 +36,6 @@
             m => m.ProviderName,
             controlHtmlAttributes: new { type = "text", autofocus = "autofocus", spellcheck = "false" })
 
-        <!--<label for="providerNameInput" class="form-label">Provider name</label>
-        <input type="text" class="form-control" id="providerNameInput" value="Key Training Ltd">-->
     </div>
     <div id="providerSitesList">
         <h2 class="heading-medium">Manage your training sites</h2>
@@ -51,83 +49,16 @@
                         <col>
                     </colgroup>
                     <tbody>
-                    <tr>
-                        <td>Basing View, Basingstoke</td>
-                        <td>
-                            <a href="@Url.RouteUrl(RecruitmentRouteNames.EditProviderSite)">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Great Charles Street Queensway, Birmingham</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>St. Helens Street, Ipswich</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>South Parade, Leeds</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>24-26 Baltic Street West, London</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Dean Street, Newcastle upon Tyne</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Judson Road, Peterlee</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>David Murray John Tower, Swindon</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>6-10 Gills Yard, Wakefield</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Sheet Street, Windsor</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Sheep Street, Wellingborough</td>
-                        <td>
-                            <a href="edit-site.html">Edit</a>
-                        </td>
-                        <td></td>
-                    </tr>
+                    @foreach (var providerSiteViewModel in @Model.ProviderSiteViewModels)
+                    {
+                        <tr>
+                            <td>@providerSiteViewModel.Name</td>
+                            <td>
+                                <a href="@Url.RouteUrl(RecruitmentRouteNames.EditProviderSite, new {ern = providerSiteViewModel.Ern})">Edit</a>
+                            </td>
+                            <td></td>
+                        </tr>
+                    }
                     </tbody>
                 </table>
             </div>
