--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/EditSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/EditSite.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+@model SFA.Apprenticeships.Web.Recruit.ViewModels.Provider.ProviderSiteViewModel
 @{
     ViewBag.Title = "Recruit an Apprentice - Edit Site";
 }
@@ -13,18 +14,24 @@
         <p>These contact details will be used on the vacancy advert.</p>
     </div>
     <h2 class="heading-medium">Contact details</h2>
-    <div class="form-group">
-        <label for="siteName" class="form-label">Training site name</label>
-        <input id="siteName" type="text" class="form-control" value="Basing View">
-    </div>
-    <div class="form-group">
-        <label for="siteEmail" class="form-label">Key contact email address</label>
-        <input id="siteEmail" type="email" class="form-control" value="basing-view@keytraining.co.uk">
-    </div>
-    <div class="form-group">
-        <label for="sitePhone" class="form-label">Phone number</label>
-        <input id="sitePhone" type="tel" class="form-control form-control-1-3" value="01256 320222">
-    </div>
+
+@using (Html.BeginRouteForm(RecruitmentRouteNames.EditProviderSite, FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+
+    @Html.FormTextFor(
+            m => m.Name,
+            controlHtmlAttributes: new { type = "text", autofocus = "autofocus", spellcheck = "false" })
+
+    @Html.FormTextFor(
+            m => m.EmailAddress,
+            controlHtmlAttributes: new { type = "email", spellcheck = "false" })
+
+    @Html.FormTextFor(
+            m => m.PhoneNumber,
+            controlHtmlAttributes: new { @class = "form-label", type = "tel", spellcheck = "false" })
+    
     <div class="form-group form-group-compound" id="addressInputWrapper">
         <label for="pca-addressInput" class="form-label">Find training site address</label>
         <span class="form-hint">Enter postcode or start typing address</span>
@@ -61,7 +68,11 @@
             </div>
         </div>
     </div>
+
+    @Html.HiddenFor(m => m.Ern);
+
     <div class="form-group">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.ManageProviderSites)" class="button">Save to sites</a>
+        <button class="button">Save to sites</button>
     </div>
+}
 </div>
