--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/AddSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/AddSite.cshtml
@@ -1,6 +1,17 @@
-﻿@{
+﻿@using SFA.Apprenticeships.Web.Common.Framework
+@using SFA.Apprenticeships.Web.Recruit.Constants
+@using SFA.Apprenticeships.Web.Recruit.ViewModels.Provider
+
+@model SFA.Apprenticeships.Web.Recruit.ViewModels.Provider.ProviderSiteSearchViewModel
+
+@{
     ViewBag.Title = "Recruit an Apprentice - Add Site";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    const string selected = "selected";
+
+    var ernSearchSelected = Model?.SiteSearchMode == ProviderSiteSearchMode.EmployerReferenceNumber ? selected : null;
+    var nameSearchSelected = Model?.SiteSearchMode == ProviderSiteSearchMode.SiteNameAndLocation ? selected : null;
 }
 
 <div class="grid-wrapper">
@@ -9,25 +20,35 @@
             Add training site
         </h1>
     </div>
+
     <h2 class="heading-medium">Find training site</h2>
+
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+
     <div class="blocklabel-single-container">
         <div class="form-group inline clearfix blocklabel-single hide-nojs">
-            <label data-target="ernsearch-panel" for="ernsearch" class="block-label">
-                <input aria-controls="ernsearch-panel" name="sitesearch" type="radio" id="ernsearch">Search using ERN
+            <label data-target="ernsearch-panel" for="ernsearch" class="block-label @ernSearchSelected">
+                @Html.RadioButtonFor(model => model.SiteSearchMode, ProviderSiteSearchMode.EmployerReferenceNumber, new { id = "ernsearch", aria_controls = "ernsearch-panel" })
+                Search using ERN
             </label>
-            <label data-target="namesearch-panel" for="namesearch" class="block-label">
-                <input name="sitesearch" type="radio" id="namesearch">Search using site name
+            <label data-target="namesearch-panel" for="namesearch" class="block-label @nameSearchSelected">
+                @Html.RadioButtonFor(model => model.SiteSearchMode, ProviderSiteSearchMode.SiteNameAndLocation, new { id = "namesearch", aria_controls = "ernsearch-panel" })
+                Search using site name
             </label>
         </div>
-        <div id="ernsearch-panel" class="toggle-content blocklabel-content">
-            <div class="form-group">
-                <label for="ernSearch" class="form-label">Search using Employer Reference Number (ERN)</label>
-                <input type="text" id="ernSearch" class="form-control">
+        @using (Html.BeginRouteForm(RecruitmentRouteNames.AddProviderSite, FormMethod.Post, new { @id = "#searchForm" }))
+        {
+            @Html.AntiForgeryToken()
+
+            <div id="ernsearch-panel" class="toggle-content blocklabel-content">
+                @Html.FormTextFor(model => model.EmployerReferenceNumber)
+
+                <button id="find-site-button" type="submit" name="AddSiteByEmployerReferenceNumber" value="AddSiteByEmployerReferenceNumber" class="button">
+                    Find site
+                </button>
             </div>
-            <div class="form-group">
-                <a href="edit-site.html" class="button">Find site</a>
-            </div>
-        </div>
+        }
+
         <div id="namesearch-panel" class="toggle-content  blocklabel-content">
             <div class="form-group">
                 <label for="nameSearch" class="form-label">Site name</label>
@@ -53,30 +74,30 @@
                             <col>
                         </colgroup>
                         <tbody>
-                        <tr>
-                            <td>Basing View</td>
-                            <td>Basingstoke</td>
-                            <td>RG21 4FP</td>
-                            <td>
-                                <a href="edit-site.html">Select site</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Basingers Ltd</td>
-                            <td>Basingstoke</td>
-                            <td>RG21 8KL</td>
-                            <td>
-                                <a href="edit-site.html">Select site</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Basingstoke Care Ltd</td>
-                            <td>Basingstoke</td>
-                            <td>RG21 9OD</td>
-                            <td>
-                                <a href="edit-site.html">Select site</a>
-                            </td>
-                        </tr>
+                            <tr>
+                                <td>Basing View</td>
+                                <td>Basingstoke</td>
+                                <td>RG21 4FP</td>
+                                <td>
+                                    <a href="edit-site.html">Select site</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Basingers Ltd</td>
+                                <td>Basingstoke</td>
+                                <td>RG21 8KL</td>
+                                <td>
+                                    <a href="edit-site.html">Select site</a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Basingstoke Care Ltd</td>
+                                <td>Basingstoke</td>
+                                <td>RG21 9OD</td>
+                                <td>
+                                    <a href="edit-site.html">Select site</a>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
