Various fixes for US824 following demo

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
@@ -55,7 +55,7 @@
 
         <div class="toggle-content" id="newProviderTerms" style="display: block;">
             <p>
-                By continuing you accept the <a href="terms-and-conditions.html" target="_blank">terms and conditions</a> of
+                By continuing you accept the <a href="@Url.RouteUrl(RecruitmentRouteNames.TermsAndConditions)" target="_blank">terms and conditions</a> of
                 this site.
             </p>
             <button class="button">Accept and continue</button>
