--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
@@ -22,7 +22,7 @@
             m => m.VerificationCode,
             controlHtmlAttributes: new { type = "text", autofocus = "autofocus", spellcheck = "false", @class = "form-control-1-3" })
     
-    <p><a href="@Url.RouteUrl(RecruitmentRouteNames.ResendVertificationCode)">Resend code</a></p>
+    <p><a href="@Url.RouteUrl(RecruitmentRouteNames.ResendVerificationCode)">Resend code</a></p>
     
     <p><a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)">Change email</a></p>
 
