--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
     <meta name="description" content="We’ve introduced a new way to recruit an apprenticeship in England.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <!--[if gt IE 8]><!-->@Styles.Render(Url.CdnContent("css/main.css", "~/Content/_assets"))<!--<![endif]-->
-    <!--[if lte IE 8]>@Styles.Render(Url.CdnContent("css/main-ie8.css", "~/Content/_assets"))<![endif]-->
+    <!--[if gt IE 8]><!-->@Styles.Render(Url.CdnContent("css/main-2.0.0.css", "~/Content/_assets"))<!--<![endif]-->
+    <!--[if lte IE 8]>@Styles.Render(Url.CdnContent("css/main-ie8-2.0.0.css", "~/Content/_assets"))<![endif]-->
     <!--[if lte IE 8]>@Styles.Render(Url.CdnContent("css/fonts-ie8.css", "~/Content/_assets"))<![endif]-->
     <!--[if gte IE 9]><!-->@Styles.Render(Url.CdnContent("css/fonts.css", "~/Content/_assets"))<!--<![endif]-->
     <link rel="shortcut icon" href="@Url.CdnContent("img/favicon.ico", "~/Content/_assets")" type="image/x-icon">
