Very basic version of US810

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
             <a id="signout-link" href="@Url.RouteUrl(ManagementRouteNames.SignOut)"><i class="fa fa-sign-out"></i>Sign out</a>
         </div>
         <div>
-            <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(ManagementRouteNames.ManagementHome)">Home</a>
+            <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(ManagementRouteNames.Dashboard)">Dashboard</a>
             <!--<a class="" id="applicationsLink" href="user-info.html">Contact details</a>-->
         </div>
     </div>
