--- a/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Home/Index.cshtml
@@ -7,12 +7,12 @@
     <section class="grid grid-2-3">
         <div class="inner-block-padr">
             <h1 class="heading-xlarge">
-                Manage an apprentice
+                Manage an apprentice <em>(Content Review Required)</em>
             </h1>
-            <h2 class="heading-medium">Provider sign in</h2>
+            <h2 class="heading-medium">Apprenticeship agent sign in<em>(Content Review Required)</em></h2>
             <p class="text">
-                You'll be taken to the "Information Management Services" sign in
-                area. Once signed in you'll be automatically returned to our service.
+                You'll be taken to the "Staff IDAMS Services" sign in
+                area. Once signed in you'll be automatically returned to our service.<em>(Content Review Required)</em>
             </p>
             <p>
                 <a href="@Url.RouteUrl(ManagementRouteNames.SignIn)" class="button">Sign in</a>
@@ -20,26 +20,6 @@
         </div>
     </section>
     <section class="grid grid-1-3 gov-border">
-        <br>
-        <ul class="list-text">
-            <li>
-                <a href="/Management/info-expect-from-employer.html">Responsibilities of the employer</a>
-            </li>
-            <li>
-                <a href="/Management/info-whos-involved.html">Who's involved in an apprenticeship?</a>
-            </li>
-            <li>
-                <a href="/Management/info-expect-from-apprentice.html">What to expect from your apprentice</a>
-            </li>
-            <li>
-                <a href="/Management/info-expect-from-provider.html">Responsibilities of the provider</a>
-            </li>
-            <li>
-                <a href="/Management/info-payments-and-funding.html">Payments and funding</a>
-            </li>
-            <li>
-                <a href="/Management/info-six-steps.html">How to employ an apprentice</a>
-            </li>
-        </ul>
+        <em>(Content Required)</em>
     </section>
 </div>
