--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
             </div>
             <div class="global-header__nav">
                 <div class="global-header__title alpha" id="headerLinkFAA">
-                    <a href="@Url.RouteUrl(ManagementRouteNames.ManagementHome)">Manage an apprentice</a>
+                    <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard)">Manage an apprentice</a>
                 </div>
             </div>
         </div>
