--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_LoginPartial.cshtml
@@ -3,12 +3,9 @@
 
 @if (Request.IsAuthenticated)
 {
-    var controller = ViewContext.Controller as RecuitmentControllerBase;
-    var fullName = (controller != null && controller.UserContext != null) ? controller.UserContext.FullName : string.Empty;
-
     <div class="account-info" id="bannerSignedIn">
         <div class="small-btm-margin">
-            <span class="your-name" id="bannerUserName">@fullName</span>
+            <span class="your-name" id="bannerUserName">@User.Identity.Name</span>
             <a id="signout-link" href="@Url.RouteUrl(ManagementRouteNames.SignOut)"><i class="fa fa-sign-out"></i>Sign out</a>
         </div>
         <div>
