--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
@@ -55,7 +55,7 @@
         </div>-->
     </div>
     <div class="toggle-content" id="newProviderContinue">
-        <a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)" class="button" id="newProviderContinueBtn">Save and continue</a>
+        <a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)" class="button" id="newProviderContinueBtn">Continue</a>
     </div>
     <div class="" id="providerDetailsSave">
         <button class="button">Save details</button>
