Correct content change

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/Sites.cshtml
@@ -58,7 +58,7 @@
         <a href="@Url.RouteUrl(RecruitmentRouteNames.Settings)" class="button" id="newProviderContinueBtn">Continue</a>
     </div>
     <div class="" id="providerDetailsSave">
-        <button class="button">Save details</button>
+        <button class="button">Continue</button>
     </div>
 }
 </div>
